changes in header/body/footer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>W3.CSS Template</title>
+        <title>Tushita 360</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -11,7 +11,7 @@
     <!-- Navbar (sit on top) -->
     <div class="w3-top">
         <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-            <a href="#home" class="w3-bar-item w3-button"><b>Tushita</b> 360</a>
+            <a href="#home" class="w3-bar-item w3-button"><b>Shubh Labh Properties</b></a>
             <!-- Float links to the right. Hide them on small screens -->
             <div class="w3-right w3-hide-small">
                 <a href="#projects" class="w3-bar-item w3-button">Projects</a>
@@ -23,10 +23,10 @@
 
     <!-- Header -->
     <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-        <img class="w3-image" src="https://images.pexels.com/photos/1292843/pexels-photo-1292843.jpeg" alt="Architecture" width="1500" height="800">
+        <img class="w3-image" src="../tushita360/images/header_body_footer/header_background.jpeg" alt="Shubh Labh Properties" width="1500" height="800">
         <div class="w3-display-middle w3-margin-top w3-center">
-            <h1 class="w3-xxlarge w3-text-white"> <span
-                    class="w3-hide-small w3-text-light-grey">Tushita</span> <span class="w3-padding w3-black w3-opacity-min"><b>360</b></span></h1>
+            <!-- <h1 class="w3-xxlarge w3-text-white"> <span
+                    class="w3-hide-small w3-text-light-grey">Shubh Labh Properties</span></h1> -->
         </div>
     </header>
 
@@ -105,8 +105,8 @@
             </p>
         </div>
 
-        <div class="w3-row-padding w3-grayscale">
-            <div class="w3-col l3 m6 w3-margin-bottom">
+        <div class="w3-row-padding">
+            <!-- <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="https://assets.skool.com/f/d3dd587c36d84d21bb8c532da9f394c5/e3b596c9aa9d482da59cf96857ef868f0561bc8db70549ea8fc61cc97a9b73f9" alt="Neel" style="width:100%">
                 <h3>Neel Shah</h3>
                 <p class="w3-opacity">CEO & Founder</p>
@@ -133,20 +133,37 @@
                 <p class="w3-opacity">Architect</p>
                 <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div> -->
+            <div class="w3-center l3 m6 w3-margin-bottom">
+                <img src="../tushita360/images/header_body_footer/neel_prashant.jpg" alt="Neel" style="width:50%; height:100%">
+                <h3>Neel Shah & Prashant Shah</h3>
+                <p class="w3-opacity">Owners/Founder</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <!-- <p><button class="w3-button w3-light-grey w3-block">Contact</button></p> -->
             </div>
+            
         </div>
 
         <!-- Contact Section -->
         <div class="w3-container w3-padding-32" id="contact">
             <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
             <p>Lets get in touch and talk about your next project.</p>
+            <p>
+            Address - 343, Mani Bhuvan, SV Road, Opp Society Hall,ICICI Bank, Goregaon ( W ), Mumbai - 104.<br>
+            Contact Numbers -<br>
+            Prashant Shah -  <a href="+917666076600">+917666076600</a> / <a href="+919892867972">+919892867972</a><br> 
+            Neel Shah -  <a href="+918958955757">+918958955757</a> / <a href="+919699994468">+919699994468</a><br>
+            Email - <a href = "mailto: info@shubhlabh.co">info@shubhlabh.co</a>
+        </p>
+
             <form action="/action_page.php" target="_blank">
                 <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
                 <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
                 <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
                 <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
                 <button class="w3-button w3-black w3-section" type="submit">
-                    <i class="fa fa-paper-plane"></i> SEND MESSAGE
+                    <!-- <i class="fa fa-paper-plane"></i> SEND MESSAGE -->
+                    <a href = "mailto: info@shubhlabh.co">Send Email</a>
                 </button>
             </form>
         </div>
@@ -163,7 +180,10 @@
 
     <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
     <footer class="w3-center w3-black w3-padding-16">
-        <p class="w3-small">Tushita360</p>
+        <p class="w3-small"> <img src="../tushita360/images/header_body_footer/maharera_logo.png" class="w3-image" style="width:5%">  Rera Number - A51800024951 
+
+            
+            </p>
         <!--  <a class="w3-button w3-round-xxlarge w3-small w3-white w3-margin-bottom" href="https://www.w3schools.com/spaces" target="_blank">Start now</a>-->
     <!-- Footer end. -->
     </footer>
